@@ -55,6 +55,7 @@ PHP                                                                        NEWS
   . sys_get_temp_dir() function that returns the default directory
     for temporary files (as requested in bug #35380). (Hartmut)
   . "context" and "binary_pipes" params in "other_options" arg. (Sara)
+  . stream_resolve_include_path(). (Sara)
 
 - Fixed bug #36630 (umask not reset at the end of the request). (Ilia)
 - Fixed bug #34286 (__toString() behavior is inconsistent). (Marcus)
